<resources>
    <string name="app_name">GraduationPj</string>
    <string name="start_place">起点</string>
    <string name="end_place">终点</string>
    <string name="child_mode">儿童模式</string>
    <string name="menu_navigation">导航</string>
    <string name="menu_note">备忘录</string>
    <string name="menu_smart_service">智能服务中心</string>
    <string name="menu_gas_service">加油服务</string>
    <string name="start_place_hint">请输入起点</string>
    <string name="end_place_hint">请输入终点</string>
    <string name="menu_media_service">多媒体</string>
    <string name="menu_user_center">个人中心</string>
    <string name="menu_communicate">联系</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="location_share">位置分享</string>
    <string name="no_result">没有结果</string>
    <string name="play_music">播放音乐</string>
    <string name="stop_music">停止播放</string>
    <string name="next_music">下一首歌</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="fail_location">定位失败</string>
    <string name="no_route">没有路线</string>
    <string name="quit_account">退出账号</string>
    <string name="today_miles">今日里程数</string>
    <string name="total_miles">历史里程数</string>
    <string name="note_title">备忘录标题</string>
    <string name="note_content">请输入备忘录内容</string>
    <string name="note_bind_route">是否绑定行程</string>
    <string name="note_alarm_time">设置提醒时间</string>
    <string name="history_route">历史路线</string>
    <string name="user_info">个人信息</string>
    <string name="vehicle_info">车辆信息</string>
    <string name="update_info">查看更新</string>
    <string name="system_setting">系统设置</string>
    <string name="system_name">车载平台系统 v1.0.0</string>
    <string name="login_name">用户</string>
    <string name="confirm_password">确认密码</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_confirm_hint">请再次输入密码</string>
    <string name="user_register">注册新用户</string>
    <string name="change_pass">更改密码</string>
    <string name="basic_info_country">国家</string>
    <string name="basic_info_country_hint">请选择地区</string>
    <string name="basic_info_province">省份</string>
    <string name="basic_info_province_hint">请选择身省份</string>
    <string name="basic_info_city">城市</string>
    <string name="basic_info_street">街道</string>
    <string name="basic_info_location">详细地址</string>
    <string name="basic_info_location_hint">请输入详细地址</string>
    <string name="basic_info_vehicle_type">车辆型号</string>
    <string name="basic_info_vehicle_type_hint">请输入车辆型号</string>
    <string name="basic_info_vehicle_name">车辆昵称</string>
    <string name="basic_info_vehicle_name_hint">请为您的爱车起一个名字</string>
    <string name="basic_info_consume">车辆百公里油耗</string>
    <string name="basic_info_consume_hint">详细地址</string>
    <string name="basic_info_miles">目前公里数</string>
    <string name="basic_info_miles_hint">请入车辆目前的公里数</string>
    <string name="basic_info_add_vehicle">我还有一辆</string>
    <string name="bind_route">绑定行程</string>
    <string name="bind_route_hint">点击选择绑定行程</string>
    <string name="note_title_hint">在此输入标题</string>
    <string name="note_content_hint">在此输入备忘录内容</string>


    <string name="prompt_email">Email(登录不需要填写)</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="login_password">密码</string>
    <string name="login_username">用户名</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register">马上注册</string>
    <string name="username_cant_null">用户名不能为空!</string>
    <string name="password_cant_null">密码不能为空!</string>
    <string name="pwd_not_confirm">密码和确认密码不匹配!</string>
    <string name="email_cant_null">邮箱地址不能为空</string>
    <string name="login_success">登录成功</string>

</resources>