<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ImageView
        android:id="@+id/userIconIv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/icon_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginNameTv"
        style="@style/s18_c333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="4dp"
        android:text="@string/login_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userIconIv" />

    <TextView
        android:id="@+id/loginPasswordTv"
        style="@style/s18_c333"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="4dp"
        android:text="@string/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginNameTv" />

    <EditText
        android:id="@+id/loginNameEt"
        style="@style/s18_c333"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_sf0f2f5_c8"
        android:hint="@string/login_name_hint"
        android:padding="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginNameTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginNameTv"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/s18_c333"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_sf0f2f5_c8"
        android:hint="@string/login_password_hint"
        android:padding="4dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/loginPasswordTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginPasswordTv"
        app:layout_constraintTop_toBottomOf="@+id/loginNameEt" />

    <TextView
        style="@style/s12_cff5c19"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/bg_shadow_common"
        android:drawableStart="@drawable/icon_deposit_safety"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/user_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/s12_cff5c19"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="26dp"
        android:drawableStart="@drawable/icon_deposit_safety"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/change_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>