<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noteTitleCl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/noteTitleTv"
            style="@style/s16_c333"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/note_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/noteTitleEt"
            style="@style/s16_c333"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="27dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/note_title_hint"
            android:inputType="number"
            android:textColorHint="@color/color_b2b2b2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/noteTitleTv"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_d9d9d9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noteTitleTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bindRouteCl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitleCl">

        <TextView
            android:id="@+id/bindRouteTv"
            style="@style/s16_c333"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/note_bind_route"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/routeSelectTv"
            style="@style/s16_c333"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="27dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/bind_route_hint"
            android:inputType="number"
            android:textColorHint="@color/color_b2b2b2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/bindRouteTv"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/color_d9d9d9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bindRouteTv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noteCl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/shape_s80f0f2f5_c4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bindRouteCl">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/contentEtNSV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/countTv"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/contentEt"
                style="@style/s14_c333"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/note_content_hint"
                android:paddingHorizontal="12dp"
                android:paddingVertical="12dp"
                android:textColorHint="#B2B2B2"
                tools:ignore="Autofill,LabelFor,TextFields"
                tools:text="" />

        </androidx.core.widget.NestedScrollView>


        <TextView
            android:id="@+id/countTv"
            style="@style/s12_c999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="(0/100)" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/confirmTv"
        style="@style/s18_cffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_c23_g_normal"
        android:gravity="center"
        android:paddingVertical="16dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteCl" />

</androidx.constraintlayout.widget.ConstraintLayout>